--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "seed:admin": "ts-node -r dotenv/config scripts/seed-admin.ts"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
@@ -19,18 +20,25 @@
     "autoprefixer": "^10",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.0.3",
     "eslint": "^8",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
     "next": "^14.2.33",
     "next-auth": "^4.24.11",
     "postcss": "^8",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "stripe": "^18.5.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
