--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,9 @@
     "seed:admin": "ts-node -r dotenv/config scripts/seed-admin.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.40.0",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
@@ -30,7 +33,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
     "next": "^14.2.33",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "postcss": "^8",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
